2009-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSGeometry.h:
	* Source/NSGeometry.m:
	Inspired by Matt Rice's comments on NSEqualRects(), moved the
	equality testing functions from the header to the implementation
	file and added conditionally compiled code to allow us to do a
	fuzzy equality test.  Still need to decide whether this is actually
	the correct thing to do though.

2009-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUnarchiver.m:
	make float and double interchangable to cope with MacOS-X 10.5
	API which can use either for CGFloat.
	* Source/NSXMLParser.m: optimize sloppy parser somewhat.

2009-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/mframe/i386/linux:
	* Source/mframe/i386/sysv4.2MP:
	* Source/mframe/i386/linux-gnu:
	* Source/mframe/i386/sysv4.2uw2.1.3:
	* Source/mframe/i386/freebsd:
	* Source/mframe/i386/openbsd:
	* Source/mframe/i386/generic:
	Update/fix macro to build method signature information.

2009-02-20  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Add checks for backtrace() function
        * Headers/Additions/GNUstepBase/config.h.in: regenerate
        * configure: regenerate
        * Source/NSDebug.m: Use backtrace() to get stack if possible ...
        it's more reliable than gcc's __builtin_frame_address() function.
        * Source/cifframe.m: Allocate a slightly larger buffer when
        processing invocations ... somehow this fixes a write outside
        allocated memory by the ffi library on my 64bit debian system.

2009-02-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUndoManager.m: Don't post checkpoint notification when
	beginning top level group.  Fix for #25607

2009-02-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Look in LOCAL for headers/libs

	* Headers/Foundation/NSObjCRuntime.h: Define NSINTEGER_DEFINED.
	* Headers/Additions/GNUstepBase/GSCategories.h,
	Headers/Additions/GNUstepBase/GSUnion.h: Additional definitions to compile